--- a/10_days_assignment/final-project/assets/stylesheet/main.scss
+++ b/10_days_assignment/final-project/assets/stylesheet/main.scss
@@ -1,6 +1,46 @@
 @import "base";
 @import "general";
 
+
+// ==================================
+// Header
+// ==================================
+
+
+.header {
+	padding: 2rem 12rem;
+	background-color: transparent;
+	position: absolute;
+	width: 100%;
+}
+.nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.logo {
+	margin: 0;
+}
+.nav__menu {
+	@extend .nav;
+}
+.nav__link {
+	font-size: 1.6rem;
+	text-transform: uppercase;
+	margin-left: 3rem;
+	transition: all 200ms ease-in-out;
+	&.active {
+		color: orange;
+	}
+	&:hover {
+		color: orange;
+	}
+}
+#toggle, .label {
+	display: none;
+}
+
+
 /*============================================*/
 								/*main css*/
 /*============================================*/
@@ -40,36 +80,6 @@
 		background: url("../../assets/media/home-img.jpg") 40% 50%;
 		grid-area: item1;
 		background-size: cover;
-
-		.nav-list {
-			display: flex;
-			position: absolute;
-			top: 0;
-			left: 0;
-			width: 100vw;
-			justify-content: space-around;
-			align-items: center;
-			line-height: 3;
-			padding: 0 2%;
-
-			i {
-				font-size: 2rem;
-			}
-			
-			h4 {
-				margin: 0 30vw 0 7vw;
-			}
-
-			a {
-				text-transform: uppercase;
-			}
-			.active {
-				color: rgba(255,165,0, 1); 
-			}
-			a:hover {
-				color: rgba(255,165,0, 1);
-			}
-		}
 	}
 
 		// ===============================================
@@ -78,7 +88,7 @@
 
 	.box2 {
 		grid-area: item2;
-		padding: 32vh 3rem;
+		padding: 20rem 3rem;
 		background-color: rgba(255,228,196, 0.6);
 	}
 
@@ -274,7 +284,7 @@
 	}
 	
 		// ===============================================
-									// box 14
+									// form section
 		// ===============================================
 
 	
@@ -295,6 +305,7 @@
 			font-size: 2rem;
 			padding: 0.6rem 1rem;
 			width: 40vw;
+			color: #fff;
 		}
 		.btn {
 			background: #fff;
@@ -317,7 +328,7 @@
 	}
 
 		// ===============================================
-									// box 16
+									// contact section
 		// ===============================================
 
 	.box16 {
@@ -342,7 +353,7 @@
 	}
 
 		// ===============================================
-									// box 17
+									// map section
 		// ===============================================
 
 	.box17 {
@@ -351,11 +362,12 @@
 		iframe {
 			margin-left: 50%;
 			transform: translateX(-50%);
+			box-shadow: 0 0 8px 6px rgba(0, 0, 0, 0.1);
 		}
 	}
 
 		// ===============================================
-									// footer
+									// footer section
 		// ===============================================
 
 
@@ -374,14 +386,14 @@
 				font-size: 2.2rem;
 			}
 		}
-		.social-links {
+		.social-links ul {
 			display: flex;
-			width: 100%;
 			justify-content: center;
 			padding: 3rem 0;
+			margin: 3rem 0;
 
 			i {
-				font-size: 3rem;
+				font-size: 2.3rem;
 				margin: 0 3vw;
 				color: $secondry-clr;
 				align-content: baseline;
@@ -397,9 +409,9 @@
 // ===============================================
 
 
-@media all and (max-width: 900px) {
+@media all and (max-width: 1024px) {
 	:root {
-		font-size: 6px;
+		font-size: 8px;
 	}
 
 	.grid-container {
@@ -432,6 +444,7 @@
 			width: 100vw;
 			height: auto;
 			background-size: cover;
+			padding: 7rem 6rem;
 		}
 		.box1 {
 			.nav-list {
@@ -445,12 +458,30 @@
 					display: inline-block;
 					margin: 0;
 				}
+
+				.menu-bar:active .links a {
+					display: block;
+					width: 40vw;
+					background-color: black;
+				}
+
+				.menu-bar:transition {
+					display: block;
+					-webkit-transition-property: border;
+					-webkit-transition-duration: infinite;
+					-webkit-transition-timing-function: ease-in;
+				}
 			}
 		}
-
+		.box2 {
+			padding: 10rem 3rem;
+		}
 		.box14 {
 			fieldset input, textarea {
-				width: 60vw;
+				width: 90%;
+			}
+			.btn {
+				width: 25vw;
 			}
 		}
 		.box17 {
@@ -469,5 +500,35 @@
 			min-height: 30vh;
 			width: 100%;
 		}
+	}
+}
+
+@media all and (max-width: 768px) {
+
+	.header {
+		padding: 2rem 1rem;
+	}
+	.label {
+		display: block;
+		i {
+			font-size: 3rem;
+		}
+	}
+	#toggle:checked ~ .nav__menu {
+		display: block;
+	}
+	.nav__menu {
+		flex-direction: column;
+		position: absolute;
+		right: 4rem;
+		top: 3rem;
+		display: none;
+		background: #fff;
+		padding: 20px;
+	}
+	.nav__link {
+		margin-left: 0;
+		margin-bottom: 3rem;
+		display: block;
 	}
 }
